fixed button spacing on main page

--- a/public/style.css
+++ b/public/style.css
@@ -139,12 +139,13 @@ li {
   float: right;
   position: relative;
   outline: none;
-  bottom: 4.5em;
+  bottom: 6em;
   margin-right: 1em;
-  padding-right: 5px;
-  padding-left: 5px;
-  margin-top: 1.5em;
-  padding-bottom: 3px;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin-top: 2em;
+  padding-bottom: 5px;
+  padding-top: 5px;
   border: 2px solid #017196;
 
 }
@@ -166,7 +167,7 @@ li {
   padding-right: 1em;
   padding-top: 3px;
   padding-bottom: 3px;
-  margin-top: 1.1em;
+  margin-top: 1.8em;
   margin-left: 2em;
   border: 2px solid #357a38;
   outline: none;
@@ -188,7 +189,7 @@ li {
   outline: none;
   border: 2px solid rgb(207, 57, 82);
   left: 1em;
-  margin-top: 1.25em;
+  margin-top: 2em;
   position: relative;
   padding-top: 5px;
   padding-bottom: 5px;
